fix: add fnol and claims and tab arrows on mobile

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -29,3 +29,15 @@ h2 {
 .pointer {
   cursor: pointer;
 }
+#arrow-left {
+  position: absolute;
+  left: 0;
+  z-index: 999;
+  background-color: white;
+}
+#arrow-right {
+  position: absolute;
+  right: 0;
+  z-index: 999;
+  background-color: white;
+}
